# aniper

./: .dockerignore  .gitignore  AGENTS.md  AGENTS_GUIDE.md  Cargo.toml  Dockerfile  PRODUCTION_READY.md  README.md  SOLANA_URL_FIX.md  bench_latency.json  ci_logs.txt  comprehensive_validator.py  connectivity_test_20250711_235424.json  connectivity_test_20250711_235431.json  connectivity_test_20250711_235505.json  connectivity_test_20250711_235512.json  connectivity_test_20250712_000137.json  connectivity_test_20250712_000247.json  connectivity_test_20250712_000330.json  connectivity_test_20250712_000401.json  connectivity_test_20250712_000533.json  crypto_vs_meme_comparison.py  docker-compose.yml  edge_metrics.csv  live_data_test.py  live_market_test.py  live_solana_data_20250710_193112.json  meme_coin_test.py  model_performance_tuning.py  prometheus.yml  quick_live_test.py  requirements.txt  simple_trade_trigger.py  test_connectivity.py  trigger_trade.py  websocket_test.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
brain/: Dockerfile  __init__.py  cron_retrain.py  manager.py  requirements.txt
brain/agents/: __init__.py  heuristic_agent.py  narrative_agent.py  performance_coach.py  redteam_agent.py
executor/: Cargo.toml  Dockerfile
executor/src/: classifier.rs  compliance.rs  governance.rs  lib.rs  main.rs  metrics.rs  risk.rs  trader.rs  ws_feed.rs
executor/test-ledger/: faucet-keypair.json
infra/terraform/: main.tf
models/candidate/: model.wasm
scripts/: cli_demo.sh  ingest_historical_data.py  multi_platform_test.sh  replay_harness.sh  run_risk_sim.sh
tests/: agent_coach.py  agent_heuristic.py  agent_narrative.py  agent_redteam.py  classifier.rs  cli.rs  compliance.rs  metrics.rs  risk.rs  trader.rs  trader_oco.rs  ws_feed.rs
tests/data/: mock_data_letsbonk.json  mock_data_pumpfun.json  simple_test.json
