[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1"
metrics = "0.21"
metrics-exporter-prometheus = "0.11"
wasmtime = "18"
tokio-tungstenite = { version = "0.21", features = ["tokio-native-tls"] }
futures-util = "0.3"
once_cell = "1"
solana-client = "1.18"
solana-sdk = "1.18"
base64 = "0.21"
bincode = "1.3"

[dev-dependencies]
wat = "1"
mockito = "1"
which = "4" 