[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1"
metrics = "0.21"
metrics-exporter-prometheus = "0.11"
wasmtime = "18"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
once_cell = "1"
solana-client = "1.18.17"
solana-program = "1.18.17"
solana-sdk = "1.18.17"
solana-transaction-status = "1.18.17"
solana-cli-config = "1.18.1"
base64 = "0.21"
bincode = "1.3"
redis = { version = "0.24", features = ["tokio-comp", "aio"] }
hyper = { version = "0.14", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
wat = "1"
mockito = "1"
which = "4"
tempfile = "3"

[[test]]
name = "cli"
path = "../tests/cli.rs"

[[test]]
name = "compliance"
path = "../tests/compliance.rs"

[[test]]
name = "metrics"
path = "../tests/metrics.rs"

[[test]]
name = "risk"
path = "../tests/risk.rs"

[[test]]
name = "trader"
path = "../tests/trader.rs"

# [[test]]
# name = "trader_oco"
# path = "../tests/trader_oco.rs"

[[test]]
name = "ws_feed"
path = "../tests/ws_feed.rs"

[[test]]
name = "classifier"
path = "../tests/classifier.rs"
